--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,8 @@ services:
     name: wedding-website
     runtime: node
     plan: free
-    buildCommand: pnpm install && pnpm run build
-    startCommand: pnpm start
+    buildCommand: npm install --legacy-peer-deps && npm run build
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
